# Search-Engine

./: .gitignore  Cargo.toml  sprawozdanie.ipynb
Frotend/: index.html  package-lock.json  package.json
Frotend/src/: App.css  App.tsx  DocumentPage.tsx  SearchPage.tsx  dbparser.rs  scraper.rs
backend/: .gitignore  Cargo.toml  LICENSE  sprawozdanie.ipynb
backend/src/: main.rs
backend/src/document/: parser.rs
backend/src/engine/: search.rs
backend/src/matrix/: mod.rs
backend/src/preprocessing/: tokenizer.rs
backend/src/stemer/: porter_algorithm.rs
backend/src/util/: data.rs  idf.rs  mod.rs  norm.rs  parser.rs  search.rs  steming.rs  svd.rs  tokenizer.rs
frontend/: tsconfig.json
frontend/src/: App.tsx  index.css
src/: main.rs
src/document/: parser.rs
src/engine/: search.rs
src/matrix/: mod.rs
src/preprocessing/: tokenizer.rs
src/stemer/: mod.rs
