[package]
name = "Search-Engine"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.1"
sprs = { version = "0.11", features = ["serde"] }
actix-web = "4.3.1"
actix-cors = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = "0.35.0"
nalgebra = "0.32"
reqwest = { version = "0.11", features = ["json", "blocking"] }
bincode = "1.3"
